--- a/app/styles/components/Layout.css
+++ b/app/styles/components/Layout.css
@@ -1,13 +1,17 @@
 .wrapper {
   display: flex;
-  width: 1600px;
-  max-width: calc(100vw - 20px);
-  padding: 0 10px;
-  margin: 0 auto;
+  padding-bottom: 50px !important;
 }
 .wrapper__right {
   padding: 20px 20px 0 0;
   width: 100%;
+}
+
+.container {
+  width: 1600px;
+  max-width: calc(100vw - 20px);
+  padding: 0 10px;
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=Layout.css.map */
