--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,13 +1,17 @@
 .wrapper {
   display: flex;
-  width: 1600px;
-  max-width: calc(100vw - 20px);
-  padding: 0 10px;
-  margin: 0 auto;
+  padding-bottom: 50px !important;
 }
 .wrapper__right {
   padding: 20px 20px 0 0;
   width: 100%;
+}
+
+.container {
+  width: 1600px;
+  max-width: calc(100vw - 20px);
+  padding: 0 10px;
+  margin: 0 auto;
 }
 
 .nav {
@@ -29,11 +33,20 @@
   justify-content: center;
   gap: 0.5rem;
   opacity: 0.5;
+  z-index: 10;
+  position: relative;
   transition: 0.2s ease-in;
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.25);
 }
 .nav-item:hover {
+  box-shadow: none;
   opacity: 0.8;
+}
+.nav-item:hover::after {
+  width: fit-content;
+  padding: 0 25px;
+  padding-left: 70px;
+  opacity: 1;
 }
 .nav-item:hover img {
   transform: rotate(180deg);
@@ -64,6 +77,49 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+}
+
+.select-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 65px;
+  background: white;
+  z-index: 10;
+  font-size: 20px;
+  font-weight: 500;
+  box-shadow: 0px -5px 67px -14px rgba(0, 0, 0, 0.25);
+  transition: 0.3s ease-in;
+}
+.select-bar.select-bar_hidden {
+  box-shadow: none;
+  bottom: -65px;
+}
+.select-bar__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.select-bar__col {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.select-bar__btn {
+  display: flex;
+  align-items: center;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: none;
+  justify-content: center;
+}
+.select-bar__btn img {
+  width: 100%;
+}
+.select-bar__btn.select-bar__btn_min img {
+  width: 40px;
 }
 
 * {
@@ -134,6 +190,10 @@ body {
   justify-content: center;
   transition: 0.1s ease-in;
   cursor: pointer;
+}
+.position__btn.position__btn_disabled {
+  pointer-events: none;
+  opacity: 0.5;
 }
 .position__btn:hover {
   opacity: 0.8;
