--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,3 +1,6 @@
+@import "filepond/dist/filepond.min.css";
+@import "@draft-js-plugins/static-toolbar/lib/plugin.css";
+@import "filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css";
 .wrapper {
   display: flex;
   padding-bottom: 50px !important;
@@ -41,6 +44,7 @@
 .nav-item:hover {
   box-shadow: none;
   opacity: 0.8;
+  transform: scale(1.1);
 }
 .nav-item:hover::after {
   width: fit-content;
