--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -1,5 +1,6 @@
 @import "vars";
 
+@import "components/libs";
 @import "components/Layout";
 @import "components/Navigation";
 @import "components/Header";
