--- a/app/styles/components/Navigation.css
+++ b/app/styles/components/Navigation.css
@@ -10,7 +10,7 @@
   border-radius: 70px;
   width: 70px;
   height: 70px;
-  background: #50139E;
+  background: linear-gradient(90deg, #FF00C7 -6.87%, #50139E 108.97%);
   display: flex;
   align-items: center;
   padding: 0 16px;
