--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -1,5 +1,6 @@
 $bg: #F4F4F4;
 $font_color: #0E002C;
-$purple: linear-gradient(90deg, #FF00C7 -6.87%, #50139E 108.97%);;
+$pink: #FF00C7;
+$purple: linear-gradient(90deg, $pink -6.87%, #50139E 108.97%);;
 $lime: #1CCDAD;
 $red: #D3623F;
