--- a/app/styles/components/Header.css
+++ b/app/styles/components/Header.css
@@ -1,4 +1,10 @@
 .header {
+  display: flex;
+  gap: 2rem;
+  margin: 15px 0;
+  margin-bottom: 45px;
+}
+.header__container {
   height: 70px;
   width: 100%;
   border-radius: 60px;
@@ -9,8 +15,6 @@
   justify-content: space-between;
   padding-left: 30px;
   padding-right: 6px;
-  margin: 15px 0;
-  margin-bottom: 45px;
 }
 .header__right {
   display: flex;
