--- a/app/styles/components/Header.scss
+++ b/app/styles/components/Header.scss
@@ -1,18 +1,23 @@
 @import "../vars";
 
 .header {
-  height: 70px;
-  width: 100%;
-  border-radius: 60px;
-  background: #fff;
-  box-shadow: 0px 4px 42px -22px rgba(0, 0, 0, 0.25);
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-left: 30px;
-  padding-right: 6px;
+  gap: 2rem;
   margin: 15px 0;
   margin-bottom: 45px;
+
+  &__container {
+    height: 70px;
+    width: 100%;
+    border-radius: 60px;
+    background: #fff;
+    box-shadow: 0px 4px 42px -22px rgba(0, 0, 0, 0.25);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 30px;
+    padding-right: 6px;
+  }
 
   &__right {
     display: flex;
