--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -424,6 +424,12 @@ input[type=radio] {
 }
 
 .header {
+  display: flex;
+  gap: 2rem;
+  margin: 15px 0;
+  margin-bottom: 45px;
+}
+.header__container {
   height: 70px;
   width: 100%;
   border-radius: 60px;
@@ -434,8 +440,6 @@ input[type=radio] {
   justify-content: space-between;
   padding-left: 30px;
   padding-right: 6px;
-  margin: 15px 0;
-  margin-bottom: 45px;
 }
 .header__right {
   display: flex;
@@ -486,6 +490,12 @@ input[type=radio] {
   width: 40px;
 }
 
+.sub-nav {
+  display: flex;
+  gap: 1rem;
+  height: fit-content;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -501,13 +511,33 @@ body {
   background: #F4F4F4;
 }
 
-.positions {
+.link {
+  text-decoration: none;
+  cursor: pointer;
+  position: relative;
+  color: #FF00C7;
+}
+.link:hover::after {
+  width: 100%;
+}
+.link::after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  height: 2px;
+  width: 0;
+  left: 0;
+  transition: 0.1s ease-in;
+  background: #FF00C7;
+}
+
+.rows {
   padding: 45px 0;
   overflow-x: scroll;
   max-width: 100%;
 }
 
-.position {
+.row {
   display: flex;
   gap: 5px;
   background: #fff;
@@ -519,33 +549,37 @@ body {
   font-size: 16px;
   padding: 5px 10px 5px 5px;
 }
-.position + .position {
+.row__tooltip-thumb {
+  width: 60px;
+  height: 60px;
+}
+.row + .row {
   margin-top: 5px;
 }
-.position:hover {
+.row:hover {
   background: #f7f7f7;
 }
-.position__btns {
+.row__btns {
   display: flex;
   align-items: center;
   gap: 15px;
   justify-content: flex-end;
 }
-.position__price {
+.row__price {
   display: flex;
   align-items: center;
   gap: 10px;
   color: linear-gradient(90deg, #FF00C7 -6.87%, #50139E 108.97%);
   font-weight: 500;
 }
-.position__discount {
+.row__discount {
   color: white;
   border-radius: 20px;
   padding: 5px 10px;
   font-size: 14px;
   background: linear-gradient(90deg, #FF00C7 -6.87%, #50139E 108.97%);
 }
-.position__btn {
+.row__btn {
   border-radius: 10px;
   width: 40px;
   height: 40px;
@@ -555,51 +589,51 @@ body {
   transition: 0.1s ease-in;
   cursor: pointer;
 }
-.position__btn.position__btn_disabled {
+.row__btn.row__btn_disabled {
   pointer-events: none;
   opacity: 0.5;
 }
-.position__btn:hover {
+.row__btn:hover {
   opacity: 0.8;
 }
-.position__btn img {
+.row__btn img {
   width: 20px;
 }
-.position__btn.position__btn_edit {
+.row__btn.row__btn_edit {
   background: #1CCDAD;
 }
-.position__btn.position__btn_delete {
+.row__btn.row__btn_delete {
   background: #D3623F;
 }
-.position__col {
+.row__col {
   padding: 0 5px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.position__col.position__col_1 {
+.row__col.row__col_1 {
   flex-basis: 5%;
 }
-.position__col.position__col_2 {
+.row__col.row__col_2 {
   flex-basis: 10%;
 }
-.position__col.position__col_3 {
+.row__col.row__col_3 {
   flex-basis: 15%;
 }
-.position__col.position__col_4 {
+.row__col.row__col_4 {
   flex-basis: 20%;
 }
-.position__number {
+.row__number {
   justify-content: flex-end;
 }
-.position__img {
+.row__img {
   width: 55px;
   height: 55px;
   border-radius: 15px;
   background-position: center;
   background-size: cover;
 }
-.position__id {
+.row__id {
   font-weight: 500;
 }
 
