--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -68,8 +68,11 @@ body {
   padding: 5px 10px 5px 5px;
 
   &__tooltip-thumb {
-    width: 60px;
-    height: 60px;
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    width: 100px;
+    height: 100px;
   }
 
   &+.row {
