--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -364,6 +364,7 @@ input[type=radio] {
 .wrapper {
   display: flex;
   padding-bottom: 50px !important;
+  padding-right: 30px !important;
 }
 .wrapper__right {
   padding: 20px 20px 0 0;
