--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -9,6 +9,7 @@
 @import "filepond/dist/filepond.min.css";
 @import "@draft-js-plugins/static-toolbar/lib/plugin.css";
 @import "filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;400;500;700&display=swap');
 
 * {
   margin: 0;
