--- a/app/styles/pages/store.css
+++ b/app/styles/pages/store.css
@@ -19,6 +19,10 @@
   height: 100%;
 }
 
+.module-page .slick-slider {
+  height: auto !important;
+}
+
 .modules {
   display: grid;
   row-gap: 1rem;
