--- a/app/styles/components/Navigation.css
+++ b/app/styles/components/Navigation.css
@@ -44,4 +44,84 @@
   opacity: 1;
 }
 
+@media screen and (max-width: 850px) {
+  .shop {
+    width: calc(50% - 0.5rem) !important;
+  }
+}
+@media screen and (max-width: 730px) {
+  .shop {
+    width: 100% !important;
+  }
+}
+@media screen and (max-width: 650px) {
+  .row__btns {
+    gap: 5px !important;
+  }
+  .row__btn {
+    width: 60px !important;
+    height: 60px !important;
+  }
+  .wrapper {
+    flex-direction: column;
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+    padding-bottom: 180px !important;
+  }
+  .wrapper__right {
+    padding-right: 0;
+  }
+  .anim {
+    transform: none !important;
+  }
+  .header {
+    margin: 0 !important;
+    margin-bottom: 1rem !important;
+  }
+  .sub-nav {
+    justify-content: center;
+  }
+  .nav .nav-item {
+    transform: translateY(10px);
+  }
+  .btn.btn_create {
+    position: fixed;
+    bottom: 100px;
+    left: calc(50% - 30px);
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    z-index: 101;
+    background: linear-gradient(310.59deg, #F2F3F6 3.8%, #E5E6EC 119.99%);
+    display: flex;
+    align-items: center;
+    box-shadow: -4px -4px 30px rgba(0, 0, 0, 0.25);
+    justify-content: center;
+  }
+  .btn.btn_create span {
+    display: none;
+  }
+  .btn.btn_create img {
+    display: none;
+  }
+  .btn.btn_create .btn_create__img_min {
+    display: block;
+    width: 20px;
+    filter: drop-shadow(0px 1px 3px rgba(36, 65, 93, 0.298));
+  }
+  .nav {
+    background: #F4F4F4;
+    flex-direction: row;
+    overflow: scroll;
+    justify-content: flex-start;
+    padding: 30px 30px;
+    height: auto;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+  }
+}
+
 /*# sourceMappingURL=Navigation.css.map */
