--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -425,6 +425,85 @@ input[type=radio] {
   opacity: 1;
 }
 
+@media screen and (max-width: 850px) {
+  .shop {
+    width: calc(50% - 0.5rem) !important;
+  }
+}
+@media screen and (max-width: 730px) {
+  .shop {
+    width: 100% !important;
+  }
+}
+@media screen and (max-width: 650px) {
+  .row__btns {
+    gap: 5px !important;
+  }
+  .row__btn {
+    width: 60px !important;
+    height: 60px !important;
+  }
+  .wrapper {
+    flex-direction: column;
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+    padding-bottom: 180px !important;
+  }
+  .wrapper__right {
+    padding-right: 0;
+  }
+  .anim {
+    transform: none !important;
+  }
+  .header {
+    margin: 0 !important;
+    margin-bottom: 1rem !important;
+  }
+  .sub-nav {
+    justify-content: center;
+  }
+  .nav .nav-item {
+    transform: translateY(10px);
+  }
+  .btn.btn_create {
+    position: fixed;
+    bottom: 100px;
+    left: calc(50% - 30px);
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    z-index: 101;
+    background: linear-gradient(310.59deg, #F2F3F6 3.8%, #E5E6EC 119.99%);
+    display: flex;
+    align-items: center;
+    box-shadow: -4px -4px 30px rgba(0, 0, 0, 0.25);
+    justify-content: center;
+  }
+  .btn.btn_create span {
+    display: none;
+  }
+  .btn.btn_create img {
+    display: none;
+  }
+  .btn.btn_create .btn_create__img_min {
+    display: block;
+    width: 20px;
+    filter: drop-shadow(0px 1px 3px rgba(36, 65, 93, 0.298));
+  }
+  .nav {
+    background: #F4F4F4;
+    flex-direction: row;
+    overflow: scroll;
+    justify-content: flex-start;
+    padding: 30px 30px;
+    height: auto;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+  }
+}
 .header {
   display: flex;
   gap: 2rem;
@@ -493,11 +572,25 @@ input[type=radio] {
 }
 
 .sub-nav {
-  display: flex;
+  display: none;
   gap: 1rem;
   height: fit-content;
 }
+.sub-nav_max {
+  display: flex;
+}
 
+@media screen and (max-width: 1000px) {
+  .header {
+    gap: 0;
+  }
+  .sub-nav_max {
+    display: none;
+  }
+  .sub-nav_min {
+    display: flex;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -642,21 +735,27 @@ body {
 
 .rows {
   padding: 45px 0;
-  overflow-x: scroll;
   max-width: 100%;
 }
 
 .row {
   display: flex;
   gap: 5px;
-  background: #fff;
-  border-radius: 15px;
   height: 65px;
   align-items: center;
-  justify-content: space-between;
+  overflow-x: scroll;
+}
+.row__block {
   box-shadow: 0px 4px 39px -26px rgba(0, 0, 0, 0.25);
   font-size: 16px;
   padding: 5px 10px 5px 5px;
+  background: #fff;
+  border-radius: 15px;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: space-between;
+  flex-basis: 100%;
 }
 .row__tooltip-thumb {
   background-position: center;
@@ -798,6 +897,9 @@ footer {
   gap: 0.2rem;
   font-size: 18px;
   outline: none;
+}
+.btn .btn_create__img_min {
+  display: none;
 }
 .btn.btn_sm {
   padding: 5px 10px;
