--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -173,22 +173,28 @@ body {
 
 .rows {
   padding: 45px 0;
-  overflow-x: scroll;
   max-width: 100%;
 }
 
 .row {
   display: flex;
   gap: 5px;
-
-  background: #fff;
-  border-radius: 15px;
   height: 65px;
   align-items: center;
-  justify-content: space-between;
-  box-shadow: 0px 4px 39px -26px rgba(0, 0, 0, 0.25);
-  font-size: 16px;
-  padding: 5px 10px 5px 5px;
+  overflow-x: scroll;
+
+  &__block {
+    box-shadow: 0px 4px 39px -26px rgba(0, 0, 0, 0.25);
+    font-size: 16px;
+    padding: 5px 10px 5px 5px;
+    background: #fff;
+    border-radius: 15px;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    justify-content: space-between;
+    flex-basis: 100%;
+  }
 
   &__tooltip-thumb {
     background-position: center;
@@ -355,6 +361,10 @@ footer {
   gap: .2rem;
   font-size: 18px;
   outline: none;
+
+  .btn_create__img_min {
+    display: none;
+  }
 
   &.btn_sm {
     padding: 5px 10px;
