--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -22,6 +22,13 @@ body {
   width: 300px;
   max-width: 100%;
 }
+.shop__preview {
+  height: 180px;
+  background-size: cover;
+  background-position: center;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
 .shop__preview img {
   width: 100%;
 }
