--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -24,6 +24,14 @@ body {
   width: 300px;
   max-width: 100%;
 
+  &__preview {
+    height: 180px;
+    background-size: cover;
+    background-position: center;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+  }
+
   &__preview img {
     width: 100%;
   }
